fix sidebar placement
  - it was too close to the contents column

--- a/hugo/static/css/override.css
+++ b/hugo/static/css/override.css
@@ -3,5 +3,18 @@ div.sphinxsidebar {
     float: left;
     width: 230px;
     font-size: 90%;
-    margin-left: 0;
+    margin-left: -3em;
+}
+
+div.sphinxsidebar ul ul,
+div.sphinxsidebar ul.want-points {
+    list-style: none;
+}
+
+div.sphinxsidebar ul li.toctree-l1 > a {
+    font-size: 130%;
+}
+
+div.sphinxsidebar ul li.toctree-l2 > a {
+    font-size: 115%;
 }
